# OMRChecker

./: Dockerfile  compose.yml  pyproject.toml  requirements.txt  text.md
api/: main.py
api/routes/: omr.py
api/services/: omr_service.py  redis_service.py
api/settings/: config.py
samples/simureka/: Guia.md  config.json  map_template.py  template.json
src/utils/: interaction.py
